changed width of contact box to 300px

--- a/Benjamin website.html
+++ b/Benjamin website.html
@@ -51,7 +51,7 @@
             padding: 1rem;
             border: 1px solid #ddd;
             margin-top: 2rem;
-            max-width: 600px;
+            max-width: 600px;/*300px;*/ 
             margin-left: auto;
             margin-right: auto;
         }
