changed picture resolution

--- a/Benjamin website.html
+++ b/Benjamin website.html
@@ -109,7 +109,7 @@
                     <li>Get a job as a web developer</li>
                     <li>Build a portfolio of projects</li>
                 </ol>
-                <img src="images/your-image.jpg" alt="A picture of a cat">
+                <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783" alt="A picture of a cat" width="200" height="200">
             </p>
             <section id="contact">
                 <h2>Contact Us</h2>
