changes to style

--- a/Benjamin website.html
+++ b/Benjamin website.html
@@ -12,8 +12,8 @@
             background-color: #f4f4f4;
         }
         header {
-            background: #333;
-            color: #fff;
+            background: #353434;
+            color: #ece5e5;
             padding: 1rem 0;
             text-align: center;
         }
@@ -94,7 +94,7 @@
     </nav>
     <main id="home">
         <div class="container">
-            <h2>Challenges making my first website</h2>
+            <h2><em>Challenges making my first website</em></h2>
             <p>
                 <ol>
                     <li>Understanding HTML structure</li>
@@ -102,7 +102,8 @@
                     <li>Making the website responsive</li>
                     <li>Adding interactivity with JavaScript</li>
                 </ol> 
-                <h3>What my goal is while doing this.</h3>
+                <br>
+                <h2>What my goal is while doing this.</h2>
                 <ol>
                     <li>Understand the basics of web development</li>
                     <li>Learn how to create a website from scratch</li>
@@ -110,6 +111,7 @@
                     <li>Build a portfolio of projects</li>
                 </ol>
                 <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783" alt="A picture of a cat" width="200" height="200">
+            <br>
             </p>
             <section id="contact">
                 <h2>Contact Us</h2>
@@ -126,7 +128,7 @@
                         <label for="message">Message:</label>
                         <textarea id="message" name="message" rows="4" required></textarea>
                     </div>
-                    <button type="submit">Submit</button>
+                    <button type="submit">submit-form</button>
                 </form>
             </section>
         </div>
