--- a/Benjamin website.html
+++ b/Benjamin website.html
@@ -3,85 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Benjamins first website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background: #353434;
-            color: #ece5e5;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #444;
-        }
-        nav a {
-            color: #fff;
-            padding: 1rem;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background: #555;
-        }
-        main {
-            padding: 2rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        form {
-            background: #fff;
-            padding: 1rem;
-            border: 1px solid #ddd;
-            margin-top: 2rem;
-            max-width: 600px;/*300px;*/ 
-            margin-left: auto;
-            margin-right: auto;
-        }
-        form div {
-            margin-bottom: 1rem;
-        }
-        form label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-        form input, form textarea {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-        }
-        form textarea {
-            overflow: hidden;
-            resize: none;
-        }
-        form button {
-            padding: 0.5rem 1rem;
-            background: #333;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-        form button:hover {
-            background: #555;
-        }
-    </style>
+    
 </head>
 <body>
     <header>
