--- a/Benjamin website.html
+++ b/Benjamin website.html
@@ -36,8 +36,9 @@
                 </ol>
                 <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783" alt="A picture of a cat" width="200" height="200">
             <br>
-            </p>
-            <section id="contact">
+           
+            
+             <section id="contact">
                 <h2>Contact Us</h2>
                 <form action="https://example.com/submit-form" method="post">
                     <div>
@@ -52,7 +53,7 @@
                         <label for="message">Message:</label>
                         <textarea id="message" name="message" rows="4" required></textarea>
                     </div>
-                    <button type="submit">submit-form</button>
+                    <button type="submit">SUBMIT</button>
                 </form>
             </section>
         </div>
