--- a/button.html
+++ b/button.html
@@ -1,13 +1,53 @@
 <style>
-button {
+.subscribe-button {
     background-color: red;
     color: white;
     border: none;
-    height: 36 px;
+    height: 36px;
     width: 105px;
     border-radius: 2px;
     cursor: pointer;
+    margin-right: 8px;
+}
+
+.join-button {
+    background-color: white;
+    color: blue;
+    border-style: solid;
+    border-width: 1px;
+    height: 36px;
+    width: 62px;
+    border-radius: 2px;
+    cursor: pointer;
+    
+
+
+}
+.tweet-button {
+    background-color: rgb(2, 158, 255);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 74px;
+    border-radius: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 8px;
 }
 </style>
 
-<button>SUBSCRIBE</button>
+<button class="subscribe-button">
+    SUBSCRIBE
+</button>
+
+
+<button class="join-button">
+    JOIN
+</button>
+
+<button class="tweet-button">
+    TWEET
+
+
+</button>
